--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.16.3",
     "google-translate-api": "^2.3.0",
     "morgan": "^1.9.0",
+    "readline-sync": "^1.4.9",
     "socket.io": "^2.1.0"
   },
   "devDependencies": {},
