--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "google-translate-api": "^2.3.0",
     "morgan": "^1.9.0",
     "readline-sync": "^1.4.9",
-    "socket.io": "^2.1.0"
+    "socket.io": "^2.1.0",
+    "weather-js": "^2.0.0"
   },
   "devDependencies": {},
   "scripts": {
